[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/presets/game/player/action_player/actions_player.gd" type="Script" id=1]
[ext_resource path="res://presets/game/players/command_interfaces/actions_interface.tscn" type="PackedScene" id=2]
[ext_resource path="res://presets/game/players/player.tscn" type="PackedScene" id=3]

[node name="actions_player" type="Node"]
script = ExtResource( 1 )

[node name="actions_interface" parent="." instance=ExtResource( 2 )]

[node name="player" parent="." instance=ExtResource( 3 )]
[connection signal="action_detected" from="actions_interface" to="player" method="_on_input_interface_action_detected"]
[connection signal="position_corrected" from="actions_interface" to="." method="_on_actions_interface_position_corrected"]
[connection signal="dead" from="player" to="." method="_on_player_dead"]
